Final thorough testing completed and project polished

--- a/index.html
+++ b/index.html
@@ -88,6 +88,16 @@
         <p>At Skillz Auto Revival, we are passionate about cars and committed to providing top-notch detailing services. With years of experience and attention to detail, we ensure your vehicle looks and feels its best. Our skilled technicians use premium products and techniques to revive your ride.</p>
     </section>
 
+    <section id="why-choose-us">
+        <h2>Why Choose Us</h2>
+        <ul>
+            <li>Fully insured and licensed professionals</li>
+            <li>Trusted Central Florida experts</li>
+            <li>Committed to quality and customer satisfaction</li>
+            <li>Using premium products and latest techniques</li>
+        </ul>
+    </section>
+
     <section id="gallery">
         <h2>Our Work</h2>
         <div class="gallery-grid">
@@ -128,7 +138,7 @@
 
     <footer>
         <p>&copy; 2023 Skillz Auto Revival. All rights reserved.</p>
-        <p>Contact: info@skillzautorevival.com | Phone: (123) 456-7890</p>
+        <p>Contact: info@skillzautorevival.com | Phone: (386) 414-6559</p>
     </footer>
 
     <script src="script.js"></script>
