--- a/index.html
+++ b/index.html
@@ -128,10 +128,19 @@
             Email: <a href="mailto:skillzautorevival@icloud.com">skillzautorevival@icloud.com</a><br>
             Serving Volusia County and neighboring counties
         </p>
-        <form id="contact-form">
-            <input type="text" id="name" placeholder="Your Name" required>
-            <input type="email" id="email" placeholder="Your Email" required>
-            <textarea id="message" placeholder="Your Message" required></textarea>
+        <form id="contact-form" aria-label="Contact form">
+            <label for="name" class="sr-only">Your Name</label>
+            <input type="text" id="name" placeholder="Your Name" required aria-required="true" aria-describedby="name-error">
+            <span id="name-error" class="error-message" aria-live="polite"></span>
+
+            <label for="email" class="sr-only">Your Email</label>
+            <input type="email" id="email" placeholder="Your Email" required aria-required="true" aria-describedby="email-error">
+            <span id="email-error" class="error-message" aria-live="polite"></span>
+
+            <label for="message" class="sr-only">Your Message</label>
+            <textarea id="message" placeholder="Your Message" required aria-required="true" aria-describedby="message-error"></textarea>
+            <span id="message-error" class="error-message" aria-live="polite"></span>
+
             <button type="submit">Send Message</button>
         </form>
     </section>
@@ -139,6 +148,7 @@
     <footer>
         <p>&copy; 2023 Skillz Auto Revival. All rights reserved.</p>
         <p>Contact: info@skillzautorevival.com | Phone: (386) 414-6559</p>
+        <p style="font-size: 0.7rem; color: #aaa; margin-top: 0.5rem;">jkline AI Architect</p>
     </footer>
 
     <script src="script.js"></script>
