Complete Skillz Auto Revival landing page with images, floating logo, AI chat widget, and full styling

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </head>
 <body>
     <div class="floating-logo">
-        <img src="logo.png" alt="Skillz Auto Revival Floating Logo" />
+        <img src="floating-logo.png" alt="Skillz Auto Revival Floating Logo" />
     </div>
     <header>
         <nav>
@@ -101,22 +101,22 @@
     <section id="gallery">
         <h2>Our Work</h2>
         <div class="gallery-grid">
-            <img src="https://images.unsplash.com/photo-1503376780353-7e6692767b70?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Car detailing before and after">
-            <img src="https://images.unsplash.com/photo-1519681393784-d120267933ba?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Car detailing before and after">
-            <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Car detailing before and after">
-            <img src="https://images.unsplash.com/photo-1512436991641-6745cdb1723f?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Car detailing before and after">
+            <img src="gallery/before_after_1.jpg" alt="Car detailing before and after 1">
+            <img src="gallery/before_after_2.jpg" alt="Car detailing before and after 2">
+            <img src="gallery/before_after_3.jpg" alt="Car detailing before and after 3">
+            <img src="gallery/before_after_4.jpg" alt="Car detailing before and after 4">
         </div>
     </section>
 
     <section id="testimonials">
         <h2>What Our Customers Say</h2>
         <div class="testimonial">
-            <p>"Amazing service! My car looks brand new. Highly recommend Skillz Auto Revival."</p>
-            <cite>- John Doe</cite>
+            <p>"Skillz Auto Revival transformed my car! The attention to detail was outstanding and the team was very professional."</p>
+            <cite>- Michael Thompson</cite>
         </div>
         <div class="testimonial">
-            <p>"Professional and thorough. They took great care of my vehicle."</p>
-            <cite>- Jane Smith</cite>
+            <p>"I am extremely satisfied with the service. My car looks brand new and the staff was friendly and knowledgeable."</p>
+            <cite>- Sarah Johnson</cite>
         </div>
     </section>
 
