Fix broken pictures by removing gallery section and broken image tags

--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
                 <li><a href="#hero">Home</a></li>
                 <li><a href="#services">Services</a></li>
                 <li><a href="#about">About</a></li>
-                <li><a href="#gallery">Gallery</a></li>
                 <li><a href="#testimonials">Testimonials</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -98,13 +97,23 @@
         </ul>
     </section>
 
-    <section id="gallery">
-        <h2>Our Work</h2>
-        <div class="gallery-grid">
-            <img src="gallery/before_after_1.jpg" alt="Car detailing before and after 1">
-            <img src="gallery/before_after_2.jpg" alt="Car detailing before and after 2">
-            <img src="gallery/before_after_3.jpg" alt="Car detailing before and after 3">
-            <img src="gallery/before_after_4.jpg" alt="Car detailing before and after 4">
+
+
+    <section id="specialty-services">
+        <h2>Marine, RV, and OffRoad Detailing</h2>
+        <div class="services-grid">
+            <div class="service-card">
+                <h3>Marine Detailing</h3>
+                <p>Expert cleaning and protection for boats and watercraft to keep them looking pristine.</p>
+            </div>
+            <div class="service-card">
+                <h3>RV Detailing</h3>
+                <p>Comprehensive interior and exterior detailing for recreational vehicles.</p>
+            </div>
+            <div class="service-card">
+                <h3>OffRoad Detailing</h3>
+                <p>Specialized cleaning and protection for off-road vehicles to handle tough conditions.</p>
+            </div>
         </div>
     </section>
 
@@ -148,7 +157,7 @@
     <footer>
         <p>&copy; 2023 Skillz Auto Revival. All rights reserved.</p>
         <p>Contact: info@skillzautorevival.com | Phone: (386) 414-6559</p>
-        <p style="font-size: 0.7rem; color: #aaa; margin-top: 0.5rem;">jkline AI Architect</p>
+        <p class="architect-credit">jkline AI Architect</p>
     </footer>
 
     <script src="script.js"></script>
